--- a/user.html
+++ b/user.html
@@ -43,7 +43,7 @@
             <h1>Type your name:</h1>
             <form method="post">
                 <input type="text" id = "username" placeholder="Username" value=""/>
-                <a class="neon" onclick="myFunction()" href="main.html">Submit</a>
+                <a class="neon" onclick="myFunction()" href="index.html">Submit</a>
             </form>
         </div>
 
