--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script src="D:/HP/Desktop/WEB_final/js/my_script.js" defer></script>
+        <script src="js/my_script.js" defer></script>
         <script src="js/jquery.min.js"></script>
     </head>
     <body>
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <a class="navbar-brand" href="#">
-                    <img src="D:/HP/Desktop/WEB_final/img/Logo.png" alt="logo" style="width:70px;">
+                    <img src="img/Logo.png" alt="logo" style="width:70px;">
                 </a>
                 <li class="nav-item">
                     <a class="nav-link" href="control.html">Control</a>
