--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script src="D:/HP/Desktop/WEB_final/js/my_script.js" defer></script>
+        <script src="js/my_script.js" defer></script>
         <script src="js/jquery.min.js"></script>
     </head>
 
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <a class="navbar-brand" href="#">
-                    <img src="D:/HP/Desktop/WEB_final/img/Logo.png" alt="logo" style="width:70px;">
+                    <img src="img/Logo.png" alt="logo" style="width:70px;">
                 </a>
                 <li class="nav-item">
                     <a class="nav-link" href="control.html">Control</a>
@@ -42,7 +42,7 @@
         <div class = "row pt-4">
             <div class="col-2"></div>
             <div class="col-2"> 
-                <img src="D:/HP/Desktop/WEB_final/img/Logo.png">
+                <img src="img/Logo.png">
             </div>
             <div class="col-5 text-center pt-4" style="color: #E29578;">
                 Smart Home. It is our future. And future have started. Here you can see weather status, currency and air quality. In control panel you can control light and turn on music. Enjoy your smart home!
